fixed vertical sequence-number alignment, testing widget-dropdown-values

--- a/css/routing.css
+++ b/css/routing.css
@@ -6,7 +6,7 @@
 
 .sequence {
   display: flex;
-  height: 90px;
+  height: 80px;
   background: #B3CFD4;
   margin: 0.7em;
   border-radius: 10px;
@@ -19,9 +19,13 @@
   height: 100%;
   border-radius: 10px 0 0 10px;
   text-align: center;
-  font-size: 3em;
+  font-size: 2.5em;
   font-weight: bold;
   color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
   align-self: center;
 }
 
